# yolo-detection-for-mindspore

./: README.md
Yolov5_Video_Object_Detection/: Video_Obj_Detection.cpp  Yolov5_Video_Object_Detection.vcxproj  video.props
Yolov5_Video_Object_Detection/Models/: classes.txt
Yolov5_Video_Object_Detection/Models/ms/main/cpp/: CMakeLists.txt  cameraLinkThreadWorker.cpp  cameraLinkThreadWorker.h  hello.cpp  inferHandle.cpp  inferHandle.h  test_infer.cpp
Yolov5_Video_Object_Detection/Models/ms/main/cpp/types/libentry/: index.d.ts
Yolov5_Video_Object_Detection/Models/ms/main/ets/pages/: Index.ets
Yolov5_Video_Object_Detection/Models/ms/main/resources/en_US/element/: string.json
Yolov5_Video_Object_Detection/Models/ms/main/resources/zh_CN/element/: string.json
Yolov5_Video_Object_Detection/x64/Release/: Yolov5_Video_Object_Detection.exe.recipe  Yolov5_Video_Object_Detection.iobj  Yolov5_Video_Object_Detection.ipdb  Yolov5_Video_Object_Detection.vcxproj.FileListAbsolute.txt
Yolov5_Video_Object_Detection/x64/Release/Yolov5_V.3bf7ce9c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Yolov5_Video_Object_Detection.lastbuildstate  Yolov5_Video_Object_Detection.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
